--- a/src/Components/Pages/1_Page.css
+++ b/src/Components/Pages/1_Page.css
@@ -27,9 +27,150 @@
 }
 .pageList ul li a{
     text-decoration: none;
+    outline: none;
+    border-radius: 10px;
+    padding: 5px;
+    transition: background-color 100ms;
+}
+.pageList ul li a::after{
+    content: '\f061';
+    font-family:'FontAwesome';
+    margin-left: 5px;
+    translate: -10px;
+    opacity: 0;
+    transition: all 100ms;
+    display: inline-block;
+}
+.pageList ul li a:hover::after,.pageList ul li a:focus-visible::after{
+    opacity: 1;
+    translate: 0;
+}
+
+.pageList ul li a:focus-visible,.pageList ul li a:hover {
+    background-color: #0000000f;
 }
 
 .graph{
     max-width: 500px;
     margin: 0 auto;
 }
+
+
+.pageArticle{
+    margin: 10px auto 25px;
+    padding:0 20px;
+}
+
+.pageTop h1{
+  margin-bottom: 10px;
+  font-size: 3rem;
+}
+.pageArticle h3{
+margin:20px 0 5px;
+color: #131313;
+font-size: 1.3rem;
+}
+.pageArticle img{
+    max-width: 100%;
+    max-height: 20vh;
+    width: fit-content;
+    border-radius: 15px;
+    box-shadow: 0px 3px 7px 0px #00000030;
+    margin-bottom: 10px;
+}
+.pageArticle div.imgBox{
+    display: flex;
+    flex-direction: column;
+    min-width: 350px;
+    align-items: center;
+    background: #ececec;
+    padding: 10px;
+    border-radius: 15px;
+    flex: 1;
+    border: 1.5px solid #0000001f;
+}
+.pageArticle div.imgBox p{
+    font-weight: 400;
+    color: #4a4a4a;
+    text-align: center;
+}
+.pageArticle div:has( div > img){
+    display: flex;
+    justify-content: center;
+    margin: 20px 0 0;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.pageArticle p{
+    font-size: 1.1rem;
+}
+.pagePanel{
+    position: relative;
+}
+.pagePanel:not(:empty):not(:has(img)){
+    width: 100%;
+    height: 40vh;
+}
+.pagePanel iframe{
+    width: 100%;
+    height: 100%;
+}
+.pagePanel > img{
+    width: 100%;
+    object-fit: cover;
+    max-height: 45vh;
+}
+.pagePanel:has(img)::after {
+    background: linear-gradient(0deg, var(--body-color), transparent);
+    left: 0;
+    top: unset;
+    bottom: 0;
+    width: 100%;
+    height: 18%;
+    content: '';
+    position: absolute;
+}
+
+#theQuestion{
+    background: url(/src/assets/questionmark.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 10px;
+    background-position: top;
+    padding: 30px 20px;
+    color: #fff;
+    font-size: 1.6rem;
+    font-weight: 700;
+    margin: 10px 0;
+}
+.pageTop:has(img){
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-bottom: 10px;
+    flex-direction: row-reverse;
+}
+.pageTop .pagePanel:has(img){
+    display: flex;
+    justify-content:center;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.pageTop:has(img) .pageInfo{
+    padding: 0 10px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 100%;
+    width: fit-content;
+}
+@media screen and (min-width: 1500px){
+    .pagePanel:has(img)::after {
+    background: linear-gradient(90deg, #fafafa, transparent);
+    left: 0;
+    top: 0;
+    width: 40%;
+    height: 100%;
+}}
