--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -85,6 +85,7 @@
     transform: scale(150%) translateX(-15%);
     max-width: 25vw;
     border-radius: 100vmax;
+    box-shadow: 0px 0px 10px 0px #00000042;
 }
 .Banner h2{
     font-size: clamp(10px, 1.5rem, 6vw);
