--- a/src/Components/Pages/1_Page.css
+++ b/src/Components/Pages/1_Page.css
@@ -73,7 +73,7 @@ font-size: 1.3rem;
 .pageArticle img{
     max-width: 100%;
     max-height: 20vh;
-    width: fit-content;
+    width: auto;
     border-radius: 15px;
     box-shadow: 0px 3px 7px 0px #00000030;
     margin-bottom: 10px;
@@ -81,7 +81,7 @@ font-size: 1.3rem;
 .pageArticle div.imgBox{
     display: flex;
     flex-direction: column;
-    min-width: 350px;
+    min-width: clamp(0px, 50vw, 350px);
     align-items: center;
     background: #ececec;
     padding: 10px;
@@ -93,6 +93,7 @@ font-size: 1.3rem;
     font-weight: 400;
     color: #4a4a4a;
     text-align: center;
+    font-size: 0.9rem;
 }
 .pageArticle div:has( div > img){
     display: flex;
@@ -114,6 +115,7 @@ font-size: 1.3rem;
 .pagePanel iframe{
     width: 100%;
     height: 100%;
+    border: none;
 }
 .pagePanel > img{
     width: 100%;
@@ -165,6 +167,11 @@ font-size: 1.3rem;
     justify-content: space-between;
     max-width: 100%;
     width: fit-content;
+}
+.pageTop:not(:has(img)) .pageInfo{
+    max-width: var(--page-max-width);
+    margin: auto;
+    padding: 0 20px;
 }
 @media screen and (min-width: 1500px){
     .pagePanel:has(img)::after {
