--- a/src/Components/Pages/1_Page.css
+++ b/src/Components/Pages/1_Page.css
@@ -70,7 +70,7 @@ margin:20px 0 5px;
 color: #131313;
 font-size: 1.3rem;
 }
-.pageArticle img{
+.pageArticle div.imgBox img{
     max-width: 100%;
     max-height: 20vh;
     width: auto;
@@ -108,21 +108,25 @@ font-size: 1.3rem;
 .pagePanel{
     position: relative;
 }
-.pagePanel:not(:empty):not(:has(img)){
+.pagePanel:not(:empty):not(:has(img.imgHero)):not(:has(img-comparison-slider)){
     width: 100%;
     height: 40vh;
+}
+.pagePanel:has(img-comparison-slider){
+    width: 100%;
+    text-align: center;
 }
 .pagePanel iframe{
     width: 100%;
     height: 100%;
     border: none;
 }
-.pagePanel > img{
+.pagePanel img.imgHero{
     width: 100%;
     object-fit: cover;
     max-height: 45vh;
 }
-.pagePanel:has(img)::after {
+.pagePanel:has(img.imgHero)::after {
     background: linear-gradient(0deg, var(--body-color), transparent);
     left: 0;
     top: unset;
@@ -145,7 +149,7 @@ font-size: 1.3rem;
     font-weight: 700;
     margin: 10px 0;
 }
-.pageTop:has(img){
+.pageTop:has(img.imgHero){
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -153,13 +157,13 @@ font-size: 1.3rem;
     padding-bottom: 10px;
     flex-direction: row-reverse;
 }
-.pageTop .pagePanel:has(img){
+.pageTop .pagePanel:has(img.imgHero){
     display: flex;
     justify-content:center;
     flex-wrap: wrap;
     align-items: center;
 }
-.pageTop:has(img) .pageInfo{
+.pageTop:has(img.imgHero) .pageInfo{
     padding: 0 10px;
     margin: 0 auto;
     display: flex;
@@ -168,16 +172,104 @@ font-size: 1.3rem;
     max-width: 100%;
     width: fit-content;
 }
-.pageTop:not(:has(img)) .pageInfo{
+.pageTop:not(:has(img.imgHero)) .pageInfo{
     max-width: var(--page-max-width);
     margin: auto;
     padding: 0 20px;
 }
 @media screen and (min-width: 1500px){
-    .pagePanel:has(img)::after {
+    .pagePanel:has(img.imgHero)::after {
     background: linear-gradient(90deg, #fafafa, transparent);
     left: 0;
     top: 0;
     width: 40%;
     height: 100%;
 }}
+
+#beforeFlooding, #afterFlooding {
+    position: absolute;
+    bottom: 0;
+    background: #00000057;
+    color: #fff;
+    padding: 4px;
+    backdrop-filter: blur(2px);
+    display: block;
+    line-height: 100%;
+    text-align: left;
+}
+div#afterFlooding {
+    right: 0;
+    text-align: right;
+}
+img-comparison-slider{
+    max-width: 100%;
+    border-radius: 15px;
+}
+img-comparison-slider img {
+    width: 100%;
+    max-height: 45vh;
+}
+.droneIMG img{
+    max-height: 45vh;
+    max-width: 100%;
+    border-radius: 15px;
+}
+
+.pagePanel img-comparison-slider, .pagePanel .droneIMG{
+    max-height: 0;
+    overflow: hidden;
+    transition: all 200ms;
+    margin: 0 auto;
+    display: block;
+    width: fit-content;
+}
+.pagePanel img-comparison-slider.open_tab, .pagePanel .droneIMG.open_tab{
+    max-height: 45vh;
+}
+.droneIMG{
+    position: relative;
+}
+.droneIMG #beforeFlooding{
+    bottom: 5px;
+    border-radius: 15px;
+    padding: 7px;
+}
+.pagePanel .Controller button{
+    border: none;
+    border-radius: 100vmax;
+    background-color: var(--link-color);
+    color: #fff;
+    padding: 5px 8px;
+    transition: background-color 200ms;
+    cursor: pointer;
+    font-weight: 600;
+}
+.pagePanel .Controller div{
+    position: relative;
+}
+.pagePanel .Controller div span{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 2;
+    backdrop-filter: saturate(180%) blur(20px);
+    background: var(--semi-transparent-bg);
+    user-select: none;
+    pointer-events: none;
+    margin-top: 10px;
+    width: max-content;
+    opacity: 0;
+    transition: opacity 200ms;
+}
+.pagePanel .Controller div:hover span{
+opacity: 1;
+}
+.pagePanel .Controller div.open_btn button{
+    background-color: var(--spotlight-color);
+}
+.pagePanel .Controller{
+    padding: 10px 0;
+    display: flex;
+    gap: 8px;
+    margin: 0 auto;
+}
