--- a/src/Components/Pages/1_Page.css
+++ b/src/Components/Pages/1_Page.css
@@ -66,8 +66,10 @@
 
 
 .pageArticle {
-    margin: 10px auto 25px;
-    padding: 0 20px;
+    padding: 0.1px 20px 25px;
+    border-radius: 120px;
+    transition: all 2s;
+    margin: 0 auto;
 }
 .pageArticle iframe{
     max-width: 100%;
@@ -87,6 +89,13 @@
     margin: 20px 0 5px;
     color: #131313;
     font-size: 1.3rem;
+}
+.pageArticle h4{
+    margin: 8px 0 3px;
+font-size: 1.1rem;
+}
+.pageArticle ul{
+    padding: 0 20px;
 }
 
 .pageArticle div.imgBox img {
@@ -372,6 +381,7 @@ img-comparison-slider img {
     font-family: 'FontAwesome';
     position: absolute;
     left: 18px;
+    top: 21px;
     font-size: 22px;
 }
 .warning-note.asterisc::before{
