--- a/src/Components/Pages/1_Page.css
+++ b/src/Components/Pages/1_Page.css
@@ -119,7 +119,7 @@ font-size: 1.1rem;
     margin: 10px 0;
 }
 
-.pageArticle div.imgBox img:not(.svg) {
+.pageArticle div.imgBox:not(.download) img {
     max-width: 100%;
     max-height: 20vh;
     width: auto;
@@ -127,6 +127,10 @@ font-size: 1.1rem;
     box-shadow: 0px 3px 7px 0px #00000030;
     margin-bottom: 10px;
 }
+.pageArticle div.imgBox.download img, .pageArticle div.imgBox.download i{
+max-height: 50px;
+}
+
 
 .pageArticle div.imgBox {
     display: flex;
@@ -138,6 +142,13 @@ font-size: 1.1rem;
     border-radius: 15px;
     flex: 1;
     border: 1.5px solid #0000001f;
+}
+.pageArticle div.imgBox.download{
+    justify-content: space-evenly;
+    flex-direction:row;
+    flex-wrap: wrap;
+}
+.pageArticle div.imgBox.download > *{
 }
 
 .pageArticle div.imgBox p {
