--- a/src/Components/Pages/1_Page.css
+++ b/src/Components/Pages/1_Page.css
@@ -200,12 +200,11 @@ max-height: 50px;
 }
 
 .pagePanel:has(img.imgHero)::after {
-    background: linear-gradient(0deg, var(--body-color), transparent);
+    background: linear-gradient(90deg, #fafafa, transparent);
     left: 0;
-    top: unset;
-    bottom: 0;
-    width: 100%;
-    height: 18%;
+    top: 0;
+    width: 40%;
+    height: 100%;
     content: '';
     position: absolute;
 }
@@ -226,7 +225,6 @@ max-height: 50px;
 .pageTop:has(img.imgHero) {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
     align-items: center;
     padding-bottom: 10px;
     flex-direction: row-reverse;
@@ -240,7 +238,7 @@ max-height: 50px;
 }
 
 .pageTop:has(img.imgHero) .pageInfo {
-    padding: 0 10px;
+    padding: 0 50px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -260,13 +258,20 @@ max-height: 50px;
     padding: 0 20px;
 }
 
-@media screen and (min-width: 1500px) {
+@media screen and (max-width: 1500px) {
+    .pageTop:has(img.imgHero) .pageInfo{
+        padding: 0 10px;
+    }
     .pagePanel:has(img.imgHero)::after {
-        background: linear-gradient(90deg, #fafafa, transparent);
+        background: linear-gradient(0deg, var(--body-color), transparent);
         left: 0;
-        top: 0;
-        width: 40%;
-        height: 100%;
+        top: unset;
+        bottom: 0;
+        width: 100%;
+        height: 18%;
+    }
+    .pageTop:has(img.imgHero){
+        flex-direction: column;
     }
 }
 
